--- a/config.org
+++ b/config.org
@@ -61,28 +61,29 @@
 * Appearance
 
 #+begin_src emacs-lisp
-(menu-bar-mode 0)
-(tool-bar-mode 0)
-;; (set-default-font "Fira Code 12")
-(set-default-font "Hack 11")
-;; (set-default-font "Source Code Pro 11")
-;; (set-default-font "Fantasque Sans Mono 14")
-(toggle-scroll-bar -1)
-(set-fringe-mode 0) ;; deactivates gutters at screen edges on linebreak
-(setq whitespace-line-column 999)
-;;(set-window-fringes (selected-window) 0 0 nil)
-;; (setq whitespace-style '(faces spaces indentation))
-;;(use-package solarized-theme :ensure t)
-(use-package gruvbox-theme :ensure t)
-(use-package dracula-theme :ensure t)
-(use-package badger-theme :ensure t)
-(use-package color-theme-sanityinc-tomorrow :ensure t)
-(use-package moe-theme :ensure t)
-(use-package oceanic-theme :ensure t)
-(use-package subatomic-theme :ensure t)
-;; (load-theme 'github-modern t)
-(load-theme 'subatomic t)
-;; (moe-light)
+  (menu-bar-mode 0)
+  (tool-bar-mode 0)
+  ;; (set-default-font "Fira Code 12")
+  ;; (set-default-font "Hack 11")
+  ;; (set-default-font "Source Code Pro 11")
+  ;; (set-default-font "Fantasque Sans Mono 14")
+  (set-default-font "Iosevka 13")
+  (toggle-scroll-bar -1)
+  ;;  (set-fringe-mode 0) ;; deactivates gutters at screen edges on linebreak
+  (setq whitespace-line-column 999)
+  ;;(set-window-fringes (selected-window) 0 0 nil)
+  ;; (setq whitespace-style '(faces spaces indentation))
+  ;;(use-package solarized-theme :ensure t)
+  (use-package gruvbox-theme :ensure t)
+  (use-package dracula-theme :ensure t)
+  (use-package badger-theme :ensure t)
+  (use-package color-theme-sanityinc-tomorrow :ensure t)
+  (use-package moe-theme :ensure t)
+  (use-package oceanic-theme :ensure t)
+  (use-package subatomic-theme :ensure t)
+  ;; (load-theme 'github-modern t)
+  (load-theme 'subatomic t)
+  ;; (moe-light)
 
 #+end_src
 
